Making header smaller.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1538,7 +1538,7 @@ body.home .site-head:after {
         box-sizing: border-box;
         height: auto;
         min-height: 240px;
-        padding: 15% 0;
+        //padding: 15% 0;
     }
 
     .blog-title {
@@ -1613,7 +1613,7 @@ body.home .site-head:after {
     }
 
     .site-head {
-        padding: 10% 0;
+        //padding: 10% 0;
     }
 
     .blog-title {
