--- a/src/less/style.less
+++ b/src/less/style.less
@@ -925,7 +925,7 @@ object {
     position: relative;
     display: table;
     width: 100%;
-    height: 60%;
+    //height: 60%;
     margin-bottom: 5rem;
     text-align: center;
     color: #fff;
@@ -1537,7 +1537,7 @@ body.home .site-head:after {
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         height: auto;
-        min-height: 240px;
+        //min-height: 240px;
         //padding: 15% 0;
     }
 
